# smart-files-refactor

./: .coverage  README.md  automation.py  pyproject.toml  requirements.md  t
scripts/: smart_files.py
tests/: test_automation.py
